syntax = "proto3";

package common;

option java_package = "es.peeple.areyouin.common";

enum AttendanceResponse {
  NO_RESPONSE = 0;
  NO_ASSIST = 1;
  CANNOT_ASSIST = 2;
  ASSIST = 3;
}

enum MessageStatus {
  NO_DELIVERED = 0;
  SERVER_DELIVERED = 1;
  CLIENT_DELIVERED = 2;
}

message Event {
  uint64 event_id = 1;
  uint64 author_id = 2;
  string author_name = 3;
  int64 start_date = 4;
  int64 end_date = 5;
  string message = 6;
  bool is_public = 7;
  Location geolocation = 8;
  int32 num_attendees = 9;
  int32 num_guests = 10;
  int64 created_date = 11;
  repeated EventParticipant participants = 12;
}

message Location {
  float latitude = 1;
  float longitude = 2;
}

message EventParticipant {
  uint64 user_id = 1;
  string name = 2;
  AttendanceResponse response = 3;
  MessageStatus delivered = 4;
}

message Friend {
  uint64 user_id = 1;
  string name = 2;
}
